--- a/shim-server-ui/docker/assets/views/authorizationComplete.html
+++ b/shim-server-ui/docker/assets/views/authorizationComplete.html
@@ -1,9 +1,1 @@
-<div ng-controller="MainCtrl">
-    <div class="authorization-complete-message">
-        <span ng-show="error">We're sorry, </span>
-        <span ng-show="!error">Great, </span>
-        authorization was <span ng-show="error">not </span>successful.<br/>
-        <br/>
-        This window should now close automatically.<br/>
-    </div>
-</div>
+<div ng-controller="MainCtrl"><div class="authorization-complete-message"><span ng-show="error">We're sorry,</span> <span ng-show="!error">Great,</span> authorization was <span ng-show="error">not</span>successful.<br><br>This window should now close automatically.<br></div></div>
